Bug 192729. Tabs that are still loading or have error block all keyboard shortcuts. r=bryner, sr=roc+moz